:wrench: config: aduste no template de  criacao de issues

--- a/.github/ISSUE_TEMPLATE/feature-request.yml
+++ b/.github/ISSUE_TEMPLATE/feature-request.yml
@@ -1,8 +1,9 @@
 name: 💡 Feature Request
 description: Solicitação de uma nova funcionalidade ou tarefa
 title: "[US-XX] "
-labels: ["feature"]
-assignees: []
+labels: ["enhancement"]
+assignees: [nathannolacio]
+type: Feature
 
 body:
   - type: textarea
