--- a/.github/ISSUE_TEMPLATE/feature-request.yml
+++ b/.github/ISSUE_TEMPLATE/feature-request.yml
@@ -3,6 +3,7 @@ description: Solicitação de uma nova funcionalidade ou tarefa
 title: "[US-XX] "
 labels: ["enhancement"]
 assignees: ["nathannolacio"]
+type: Feature
 
 body:
   - type: textarea
