--- a/.github/ISSUE_TEMPLATE/feature-request.yml
+++ b/.github/ISSUE_TEMPLATE/feature-request.yml
@@ -7,17 +7,17 @@ body:
   - type: textarea
     id: descricao
     attributes:
-      label: 📄 Descrição
-      description: Descreva de forma clara e objetiva a funcionalidade ou tarefa a ser desenvolvida.
-      placeholder: Exemplo: Criar endpoint para cadastro de transação...
+      label: "📄 Descrição"
+      description: "Descreva de forma clara e objetiva a funcionalidade ou tarefa a ser desenvolvida."
+      placeholder: "Exemplo: Criar endpoint para cadastro de transação..."
       value: |
         <!-- Descrição detalhada da funcionalidade -->
 
   - type: textarea
     id: criterios
     attributes:
-      label: 🎯 Critérios de Aceite
-      description: Liste os critérios para que essa issue seja considerada concluída.
+      label: "🎯 Critérios de Aceite"
+      description: "Liste os critérios para que essa issue seja considerada concluída."
       placeholder: |
         - [ ] Critério 1
         - [ ] Critério 2
@@ -28,8 +28,8 @@ body:
   - type: textarea
     id: checklist
     attributes:
-      label: ✅ Checklist Técnico
-      description: Liste os passos técnicos que precisam ser realizados.
+      label: "✅ Checklist Técnico"
+      description: "Liste os passos técnicos que precisam ser realizados."
       placeholder: |
         - [ ] Model/Entidade
         - [ ] DTO
@@ -44,8 +44,8 @@ body:
   - type: textarea
     id: contexto
     attributes:
-      label: 🔗 Contexto Adicional
-      description: Inclua qualquer informação adicional, link, exemplo de payload, prints, etc.
-      placeholder: Exemplo de JSON de request, prints, regras específicas, etc.
+      label: "🔗 Contexto Adicional"
+      description: "Inclua qualquer informação adicional, link, exemplo de payload, prints, etc."
+      placeholder: "Exemplo de JSON de request, prints, regras específicas, etc."
     validations:
       required: false
