--- a/.github/ISSUE_TEMPLATE/feature-request.yml
+++ b/.github/ISSUE_TEMPLATE/feature-request.yml
@@ -2,6 +2,7 @@ name: 💡 Feature Request
 description: Solicitação de uma nova funcionalidade ou tarefa
 title: "[US-XX] "
 labels: ["enhancement"]
+type: Feature
 
 body:
   - type: textarea
