:sparkles: feat: API do GitHub que retorna Milestones e Issues

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,8 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.web.resources.add-mappings=false
+
+#GITHUB
+github.token=${GITHUB_TOKEN}
+github.owner=meu-saldo
+github.repo=meu-saldo-backend
