--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -5,3 +5,5 @@ spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
+
+GITHUB_TOKEN=fake-token-for-tests
