--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -7,4 +7,4 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 
 GITHUB_TOKEN=fake-token-for-tests
-jwt.secret=algumsegredoteste
+jwt.secret=MySuperSecretKeyThatIsVeryLongAndSecure123!
