:recycle: ref: Ajustado Login com SSO do Google

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=meusaldo
 jwt.secret=${JWT_SECRET}
+frontend.redirect-uri=${FRONTEND_REDIRECT_URI}
 
 #GITHUB
 github.token=${GITHUB_TOKEN}
@@ -10,7 +11,6 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql=TRACE
-
 
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.web.resources.add-mappings=false
