--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,13 +2,13 @@ name: Java CI with Maven
 
 on:
   push:
-    branches: [ "main", "dev" ]  # ✅ Push na main ou dev
+    branches: [ "main", "dev" ]
   pull_request:
-    branches: [ "main", "dev" ]  # ✅ PR na main ou dev
+    branches: [ "main", "dev" ]
 
 jobs:
   build:
-    runs-on: ubuntu-latest  # Ambiente virtual Linux
+    runs-on: ubuntu-latest
 
     steps:
       - name: 📥 Checkout do código
@@ -30,3 +30,5 @@ jobs:
 
       - name: 🔨 Build e rodar **somente testes unitários**
         run: mvn clean test
+        env:
+          JWT_SECRET: ${{ secrets.JWT_SECRET }}
