--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,3 +32,4 @@ jobs:
         run: mvn clean test
         env:
           JWT_SECRET: ${{ secrets.JWT_SECRET }}
+          FRONTEND_REDIRECT_URI: ${{ secrets.FRONTEND_REDIRECT_URI }}
